@@ -35,7 +35,7 @@ public class SystemProperties extends AbstractModel<Integer> implements Persiste
     private static final long serialVersionUID;
     
     public SystemProperties() {
-        this.id = new Integer(1);
+        this.id = Integer.valueOf(1);
         this.schemaVersion = 1;
     }
     
@@ -265,11 +265,11 @@ public class SystemProperties extends AbstractModel<Integer> implements Persiste
     }
     
     public void pcCopyKeyFieldsFromObjectId(final FieldConsumer fieldConsumer, final Object o) {
-        fieldConsumer.storeObjectField(0 + SystemProperties.pcInheritedFieldCount, (Object)new Integer(((IntId)o).getId()));
+        fieldConsumer.storeObjectField(0 + SystemProperties.pcInheritedFieldCount, (Object)Integer.valueOf(((IntId)o).getId()));
     }
     
     public void pcCopyKeyFieldsFromObjectId(final Object o) {
-        this.id = new Integer(((IntId)o).getId());
+        this.id = Integer.valueOf(((IntId)o).getId());
     }
     
     public Object pcNewObjectIdInstance(final Object o) {
